# zoomcamp2025

./: .gitignore  README.md  Untitled.ipynb  notes_docker.md  notes_github_codespaces.md  notes_setup_enviornment.md  pyproject.toml
.github/workflows/: dbt-ci.yml  fhv-data-to-gcs.yml
01-docker-terraform/: homework_1.sql  ingest_data.py  pyproject.toml  script.sh  upload-data.ipynb
01-docker-terraform/terrademo/: main.tf  variables.tf
02-workflow-orchestration/: docker-compose.yml  notes_gcp_setup.md  notes_kestra.md
03-data-warehouse/: homework03_flow.yaml  homework03_flow_setup.yaml  homework03_queries.sql  notes_dwh.md
04-analytics-engineering/: bigquery_queries.sql  notes_ae_practice.md  notes_ae_setup.md  notes_ae_theory.md  notes_ae_viz.md
04-analytics-engineering/homework_solution/: README.md  homework_2025.md  kestra_flow_fhv.yml  previous_cohort.md  queries_for_tripdata.sql
04-analytics-engineering/images/: notes_ae_theory.md
04-analytics-engineering/taxi_rides_ny/: dbt_project.yml  profiles.yml
04-analytics-engineering/taxi_rides_ny/models/core/: fact_fhv_trips.sql  fact_recent_trips.sql  fct_fhv_monthly_zone_traveltime_p90.sql  fct_taxi_trips_monthly_fare_p95.sql  fct_taxi_trips_quarterly_revenue.sql  schema.yml  test_ci.sql
04-analytics-engineering/taxi_rides_ny/models/example/: ci_test_model.sql  (+2 more)
05-Batch-processing-spark/: notes_setup.md  notes_theory.md
DLT workshop/: workshop_homework.ipynb
airflow/dags/: fhv_data_to_gcs_dag.py  fhv_gcs_to_bq_dag.py
tricks/: bigquery.md  git.md  notebooks.md  poetry.md  powershell.md  vscode.md
(+5 files in other folders)
